--- a/src/components/playlist/Playlist.scss
+++ b/src/components/playlist/Playlist.scss
@@ -7,7 +7,7 @@
 }
 
 .playlist-main {
-  margin-top: 90px;
+  margin-top: 80px;
 }
 
 .playlist-main-content {
